# cournot-bnb-voter

./: .env.example  .gitignore  README.md  pyproject.toml
erc8183_voter/: __init__.py  __main__.py  adapter.py  cli.py  config.py  daemon.py  storage.py  voter.py
erc8183_voter/scripts/: create_test_dispute.py  smoke_test.py  test_pipeline.py
erc8183_voter/tests/: conftest.py  test_adapter.py  test_daemon.py  test_storage.py  test_voter.py
